# lidx

./: CMakeLists.txt  LICENSE  README.md
build-mac/lidx.xcodeproj/: project.pbxproj
scripts/: prepare-icu4c-ios.sh  prepare-icu4c-macos.sh  prepare-leveldb-ios.sh  prepare-leveldb-macos.sh  prepare.sh
src/: CMakeLists.txt  lidx-encode.cpp  lidx-encode.h  lidx-icu-utils.c  lidx-icu-utils.h  lidx-utils.h  lidx.cpp  lidx.h
